[gd_scene load_steps=76 format=3 uid="uid://ddonb1ria8edw"]

[ext_resource type="Script" uid="uid://vxxvnfnoxtam" path="res://Scenes/MC/Player.gd" id="1_auuog"]
[ext_resource type="Texture2D" uid="uid://dn7gy6tq6slgp" path="res://Sprites/MC/Idle/MC_Idle_Spritesheet.png" id="1_rpqav"]
[ext_resource type="Texture2D" uid="uid://dg8spthwuw1di" path="res://Sprites/MC/Attacks/AttackNormal/MC_AttackNormal_Spritesheet.png" id="2_3tio4"]
[ext_resource type="Script" uid="uid://dwqv65m8ieqgg" path="res://addons/finite_state_machine/scripts/state_machine.gd" id="2_kyqiw"]
[ext_resource type="Texture2D" uid="uid://beubkefcde3dn" path="res://Sprites/MC/Jump/MC_Jump_Spritesheet.png" id="3_b7vqg"]
[ext_resource type="Texture2D" uid="uid://cwqfvw4fkf3vu" path="res://Sprites/MC/Walk/MC_Walk_Spritesheet.png" id="3_fp6xj"]
[ext_resource type="Script" uid="uid://ca6dxl50x3vik" path="res://Scenes/MC/State_MC_Idle.gd" id="3_qkdcl"]
[ext_resource type="Texture2D" uid="uid://u8yyr7q5hn0b" path="res://Sprites/MC/Dash/MC_DashTrail_Spritesheet.png" id="3_rq7m6"]
[ext_resource type="Script" uid="uid://68xac6hebf4i" path="res://Scenes/MC/State_MC_Walk.gd" id="6_jyfwi"]
[ext_resource type="Texture2D" uid="uid://bvk1dj1ccvcqo" path="res://Sprites/MC/WallClimb/MC_WallClimb_Spritesheet.png" id="7_xgxtr"]
[ext_resource type="Script" uid="uid://dw2f0wkv6pc3x" path="res://Scenes/MC/State_MC_JumpStart.gd" id="8_kksrp"]
[ext_resource type="Script" uid="uid://ywjavgqxcjko" path="res://Scenes/MC/State_MC_JumpRise.gd" id="9_3tio4"]
[ext_resource type="Script" uid="uid://cfc7hjn6oj47d" path="res://Scenes/MC/State_MC_JumpTransition.gd" id="10_rq7m6"]
[ext_resource type="Script" uid="uid://dhry0sfr5bnj0" path="res://Scenes/MC/State_MC_JumpFall.gd" id="11_po2a2"]
[ext_resource type="Script" uid="uid://bxkto6ip4dr1w" path="res://Scenes/MC/State_MC_JumpLand.gd" id="12_txbll"]
[ext_resource type="Script" uid="uid://bpn1jin0ymrjf" path="res://Scenes/MC/State_MC_AttackFrontal.gd" id="14_rq7m6"]
[ext_resource type="Script" uid="uid://cutpkfeqi3mx4" path="res://Scenes/MC/State_MC_Dash.gd" id="16_po2a2"]
[ext_resource type="Script" uid="uid://dan1billuvdhn" path="res://Scenes/MC/State_MC_WallClimb.gd" id="17_txbll"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xixlo"]
size = Vector2(36, 139)

[sub_resource type="AtlasTexture" id="AtlasTexture_txbll"]
atlas = ExtResource("2_3tio4")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf7kd"]
atlas = ExtResource("2_3tio4")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_llj08"]
atlas = ExtResource("3_rq7m6")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyqiw"]
atlas = ExtResource("1_rpqav")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_gntrk"]
atlas = ExtResource("1_rpqav")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_dewec"]
atlas = ExtResource("1_rpqav")
region = Rect2(3840, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ixxa"]
atlas = ExtResource("1_rpqav")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn08x"]
atlas = ExtResource("1_rpqav")
region = Rect2(7680, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_52ee3"]
atlas = ExtResource("1_rpqav")
region = Rect2(9600, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhdu"]
atlas = ExtResource("1_rpqav")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_megsn"]
atlas = ExtResource("1_rpqav")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoq75"]
atlas = ExtResource("1_rpqav")
region = Rect2(3840, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbbd"]
atlas = ExtResource("1_rpqav")
region = Rect2(5760, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_glx4g"]
atlas = ExtResource("1_rpqav")
region = Rect2(7680, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_miouo"]
atlas = ExtResource("1_rpqav")
region = Rect2(9600, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3h8g"]
atlas = ExtResource("1_rpqav")
region = Rect2(0, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7my"]
atlas = ExtResource("1_rpqav")
region = Rect2(1920, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_arntx"]
atlas = ExtResource("1_rpqav")
region = Rect2(3840, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslt6"]
atlas = ExtResource("1_rpqav")
region = Rect2(5760, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulo2v"]
atlas = ExtResource("1_rpqav")
region = Rect2(7680, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iu4k"]
atlas = ExtResource("1_rpqav")
region = Rect2(9600, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0x7a"]
atlas = ExtResource("1_rpqav")
region = Rect2(0, 3240, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v66d"]
atlas = ExtResource("1_rpqav")
region = Rect2(1920, 3240, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63xi"]
atlas = ExtResource("1_rpqav")
region = Rect2(3840, 3240, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2e8t"]
atlas = ExtResource("1_rpqav")
region = Rect2(5760, 3240, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_qidb7"]
atlas = ExtResource("1_rpqav")
region = Rect2(7680, 3240, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_70hv0"]
atlas = ExtResource("1_rpqav")
region = Rect2(9600, 3240, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_8flut"]
atlas = ExtResource("1_rpqav")
region = Rect2(0, 4320, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7x0b"]
atlas = ExtResource("1_rpqav")
region = Rect2(1920, 4320, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_utwlt"]
atlas = ExtResource("1_rpqav")
region = Rect2(3840, 4320, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_kih0c"]
atlas = ExtResource("1_rpqav")
region = Rect2(5760, 4320, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyrkg"]
atlas = ExtResource("1_rpqav")
region = Rect2(7680, 4320, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_c43xd"]
atlas = ExtResource("1_rpqav")
region = Rect2(9600, 4320, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_avx33"]
atlas = ExtResource("1_rpqav")
region = Rect2(0, 5400, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgxtr"]
atlas = ExtResource("3_b7vqg")
region = Rect2(3840, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxpxg"]
atlas = ExtResource("3_b7vqg")
region = Rect2(0, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5hdx"]
atlas = ExtResource("3_b7vqg")
region = Rect2(1920, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_7krmn"]
atlas = ExtResource("3_b7vqg")
region = Rect2(3840, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1oiy"]
atlas = ExtResource("3_b7vqg")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_e43bt"]
atlas = ExtResource("3_b7vqg")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yw7o"]
atlas = ExtResource("3_b7vqg")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_gguga"]
atlas = ExtResource("3_b7vqg")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyfwi"]
atlas = ExtResource("3_fp6xj")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fnoa"]
atlas = ExtResource("3_fp6xj")
region = Rect2(1920, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_fites"]
atlas = ExtResource("3_fp6xj")
region = Rect2(3840, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6jfd"]
atlas = ExtResource("3_fp6xj")
region = Rect2(5760, 0, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ejsj"]
atlas = ExtResource("3_fp6xj")
region = Rect2(0, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_0axkr"]
atlas = ExtResource("3_fp6xj")
region = Rect2(1920, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7vqg"]
atlas = ExtResource("3_fp6xj")
region = Rect2(3840, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_kksrp"]
atlas = ExtResource("3_fp6xj")
region = Rect2(5760, 1080, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tio4"]
atlas = ExtResource("3_fp6xj")
region = Rect2(0, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_rq7m6"]
atlas = ExtResource("3_fp6xj")
region = Rect2(1920, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_po2a2"]
atlas = ExtResource("3_fp6xj")
region = Rect2(3840, 2160, 1920, 1080)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8cdk"]
atlas = ExtResource("7_xgxtr")
region = Rect2(0, 0, 1920, 1080)

[sub_resource type="SpriteFrames" id="SpriteFrames_rxg2u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_txbll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf7kd")
}],
"loop": false,
"name": &"AttackFrontal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_llj08")
}],
"loop": true,
"name": &"Dash",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyqiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gntrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dewec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ixxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn08x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ee3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_megsn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoq75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glx4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miouo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3h8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arntx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lslt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulo2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iu4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0x7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v66d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x63xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2e8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qidb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70hv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8flut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7x0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utwlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kih0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c43xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avx33")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgxtr")
}],
"loop": true,
"name": &"JumpFall",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxpxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5hdx")
}],
"loop": false,
"name": &"JumpLand",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7krmn")
}],
"loop": true,
"name": &"JumpRise",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1oiy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e43bt")
}],
"loop": false,
"name": &"JumpStart",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yw7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gguga")
}],
"loop": false,
"name": &"JumpTransition",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyfwi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fnoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fites")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6jfd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ejsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0axkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7vqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kksrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tio4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rq7m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_po2a2")
}],
"loop": true,
"name": &"Walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8cdk")
}],
"loop": true,
"name": &"WallClimb",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgxtr"]

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_auuog")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -70)
shape = SubResource("RectangleShape2D_xixlo")

[node name="HurtboxTrigger" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="HurtboxCollision" type="CollisionShape2D" parent="HurtboxTrigger"]
position = Vector2(0, -70)
shape = SubResource("RectangleShape2D_xixlo")

[node name="Visuals" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_rxg2u")
animation = &"AttackFrontal"
offset = Vector2(0, -540)

[node name="StateMachine" type="Node" parent="Visuals" node_paths=PackedStringArray("current_state")]
unique_name_in_owner = true
script = ExtResource("2_kyqiw")
current_state = NodePath("Idle")
metadata/_custom_type_script = "uid://dwqv65m8ieqgg"

[node name="Idle" type="Node" parent="Visuals/StateMachine"]
script = ExtResource("3_qkdcl")

[node name="Walk" type="Node" parent="Visuals/StateMachine"]
script = ExtResource("6_jyfwi")

[node name="JumpStart" type="Node" parent="Visuals/StateMachine"]
script = ExtResource("8_kksrp")

[node name="JumpRise" type="Node" parent="Visuals/StateMachine"]
script = ExtResource("9_3tio4")

[node name="JumpTransition" type="Node" parent="Visuals/StateMachine"]
script = ExtResource("10_rq7m6")

[node name="JumpFall" type="Node" parent="Visuals/StateMachine"]
script = ExtResource("11_po2a2")

[node name="JumpLand" type="Node" parent="Visuals/StateMachine"]
script = ExtResource("12_txbll")

[node name="AttackFrontal" type="Node" parent="Visuals/StateMachine"]
script = ExtResource("14_rq7m6")

[node name="Dash" type="Node" parent="Visuals/StateMachine"]
script = ExtResource("16_po2a2")

[node name="WallClimb" type="Node" parent="Visuals/StateMachine"]
script = ExtResource("17_txbll")

[node name="WallDetector" type="RayCast2D" parent="Visuals"]
position = Vector2(0, -62.999996)
rotation = -1.5707964
scale = Vector2(10, 10)
target_position = Vector2(-5.9010375e-07, 13.499999)

[node name="HitboxTriggerFrontal" type="Area2D" parent="Visuals"]
unique_name_in_owner = true
position = Vector2(74, -73)
scale = Vector2(5.361499, 9.64576)
collision_layer = 0
collision_mask = 8

[node name="HitboxCollisionFrontal" type="CollisionShape2D" parent="Visuals/HitboxTriggerFrontal"]
shape = SubResource("RectangleShape2D_xgxtr")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -200)
zoom = Vector2(1.3, 1.3)

[connection signal="body_entered" from="HurtboxTrigger" to="." method="_on_hurt_box_trigger_body_entered"]
